--- a/src/client/index.css
+++ b/src/client/index.css
@@ -36,3 +36,8 @@ body {
     padding: 10px;
     box-shadow: 5px 10px 18px #888888;
 }
+
+.add-row-button {
+    margin-left: 10% !important;
+    background-color: aquamarine !important;
+}
